--- a/index.htm
+++ b/index.htm
@@ -41,7 +41,7 @@
         <span class="msg"></span>
 
         
-        <form>
+        <form onkeydown="return event.key != 'Enter';">
           <div class="row mt-4">
             <div class="col">
               <input type="text" placeholder="product name" class="form-control product-name">
